# backend/internal/models/post.go
@@ -1,0 +1,10 @@
+package models
+
+type Post struct {
+	Id          int
+	Title       string
+	Description string
+	Content     string
+	PublishedAt string
+	ImageURL    string
+}
